--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://saramartinssilva25:fatec@1234@pes-estacionamento.k7c7yme.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://figueirapedro526:xecEL0c5MiHS6LpA@cluster0.vksiqgw.mongodb.net/estacionamento?retryWrites=true&w=majority
 
